fix ui-shadow z-index

--- a/html/document.less
+++ b/html/document.less
@@ -230,6 +230,7 @@ h1{
     right:0;
     left:0;
     bottom:0;
+    z-index:1;
     background:rgba(0,0,0,.5);
     overflow: auto;
 }
